--- a/Información.html
+++ b/Información.html
@@ -63,12 +63,14 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-clearfix u-container-align-center u-valign-middle-lg u-valign-middle-sm u-valign-middle-xs u-section-1" id="sec-fa59">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+    <section class="u-clearfix u-container-align-center u-image u-shading u-valign-middle-lg u-valign-middle-sm u-valign-middle-xs u-section-1" id="sec-fa59">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-align-center u-text u-text-1">Información</h1>
       </div>
     </section>
-    <section class="u-clearfix u-container-align-center u-valign-middle u-section-2" id="sec-dd6e">
+    <section class="u-clearfix u-container-align-center u-section-2" id="sec-dd6e">
+      <h2 class="u-text u-text-1"> ¿Por qué castrar?<br>
+      </h2>
       <div class="data-layout-selected u-clearfix u-expanded-width u-gutter-30 u-layout-wrap u-layout-wrap-1">
         <div class="u-layout">
           <div class="u-layout-col">
@@ -76,20 +78,20 @@
               <div class="u-layout-row">
                 <div class="u-container-style u-grey-5 u-layout-cell u-size-20 u-layout-cell-1">
                   <div class="u-container-layout u-valign-top u-container-layout-1"><span class="u-file-icon u-icon u-icon-1"><img src="images/1008958.png" alt=""></span>
-                    <h5 class="u-text u-text-1"> Mejora del comportamiento</h5>
-                    <p class="u-text u-text-2"> En muchos casos, disminuye comportamientos agresivos, peleas y el impulso de marcar territorio.</p>
+                    <h5 class="u-text u-text-2"> Mejora del comportamiento</h5>
+                    <p class="u-text u-text-3"> En muchos casos, disminuye comportamientos agresivos, peleas y el impulso de marcar territorio.</p>
                   </div>
                 </div>
                 <div class="u-container-style u-grey-5 u-layout-cell u-size-20 u-layout-cell-2">
                   <div class="u-container-layout u-valign-top u-container-layout-2"><span class="u-file-icon u-icon u-icon-2"><img src="images/1008958.png" alt=""></span>
-                    <h5 class="u-text u-text-3"> Supresión de funciones sexuales</h5>
-                    <p class="u-text u-text-4"> La castración elimina el celo, el flujo sanguíneo en hembras, embarazos psicológicos y catarro prepucial en machos.</p>
+                    <h5 class="u-text u-text-4"> Supresión de funciones sexuales</h5>
+                    <p class="u-text u-text-5"> La castración elimina el celo, el flujo sanguíneo en hembras, embarazos psicológicos y catarro prepucial en machos.</p>
                   </div>
                 </div>
                 <div class="u-container-style u-grey-5 u-layout-cell u-size-20 u-layout-cell-3">
                   <div class="u-container-layout u-valign-top u-container-layout-3"><span class="u-file-icon u-icon u-icon-3"><img src="images/1008958.png" alt=""></span>
-                    <h5 class="u-text u-text-5"> Beneficios para la salud a largo plazo</h5>
-                    <p class="u-text u-text-6"> Puede aumentar la expectativa de vida al reducir comportamientos de riesgo y enfermedades relacionadas con el sistema reproductivo.</p>
+                    <h5 class="u-text u-text-6"> Beneficios para la salud a largo plazo</h5>
+                    <p class="u-text u-text-7"> Puede aumentar la expectativa de vida al reducir comportamientos de riesgo y enfermedades relacionadas con el sistema reproductivo.</p>
                   </div>
                 </div>
               </div>
@@ -98,20 +100,20 @@
               <div class="u-layout-row">
                 <div class="u-container-style u-grey-5 u-layout-cell u-size-20 u-layout-cell-4">
                   <div class="u-container-layout u-valign-top u-container-layout-4"><span class="u-file-icon u-icon u-icon-4"><img src="images/1008958.png" alt=""></span>
-                    <h5 class="u-text u-text-7"> Mayor calma y estabilidad</h5>
-                    <p class="u-text u-text-8"> Al reducir la ansiedad sexual, los perros suelen mostrar un temperamento más relajado y estable, favoreciendo la convivencia.</p>
+                    <h5 class="u-text u-text-8"> Mayor calma y estabilidad</h5>
+                    <p class="u-text u-text-9"> Al reducir la ansiedad sexual, los perros suelen mostrar un temperamento más relajado y estable, favoreciendo la convivencia.</p>
                   </div>
                 </div>
                 <div class="u-container-style u-grey-5 u-layout-cell u-size-20 u-layout-cell-5">
                   <div class="u-container-layout u-valign-top u-container-layout-5"><span class="u-file-icon u-icon u-icon-5"><img src="images/1008958.png" alt=""></span>
-                    <h5 class="u-text u-text-9"> Contribución al control sanitario en la comunidad</h5>
-                    <p class="u-text u-text-10"> Al disminuir la cantidad de perros callejeros y el riesgo de transmisión de enfermedades entre ellos, mejora la salud pública en la comunidad y reduce los costos asociados a su control.</p>
+                    <h5 class="u-text u-text-10"> Contribución al control sanitario en la comunidad</h5>
+                    <p class="u-text u-text-11"> Al disminuir la cantidad de perros callejeros y el riesgo de transmisión de enfermedades entre ellos, mejora la salud pública en la comunidad y reduce los costos asociados a su control.</p>
                   </div>
                 </div>
                 <div class="u-container-style u-grey-5 u-layout-cell u-size-20 u-layout-cell-6">
                   <div class="u-container-layout u-valign-top u-container-layout-6"><span class="u-file-icon u-icon u-icon-6"><img src="images/1008958.png" alt=""></span>
-                    <h5 class="u-text u-text-11"> Procedimiento seguro y de rutina</h5>
-                    <p class="u-text u-text-12"> La castración es una cirugía común y de bajo riesgo cuando la realiza un veterinario profesional. Gracias a los avances en anestesia y cuidados postoperatorios, la recuperación suele ser rápida y con mínimas complicaciones, lo que la convierte en una opción segura para el bienestar del animal.</p>
+                    <h5 class="u-text u-text-12"> Procedimiento seguro y de rutina</h5>
+                    <p class="u-text u-text-13"> La castración es una cirugía común y de bajo riesgo cuando la realiza un veterinario profesional. Gracias a los avances en anestesia y cuidados postoperatorios, la recuperación suele ser rápida y con mínimas complicaciones, lo que la convierte en una opción segura para el bienestar del animal.</p>
                   </div>
                 </div>
               </div>
